--- a/desafios/desafio012/estilo/style.css
+++ b/desafios/desafio012/estilo/style.css
@@ -10,7 +10,6 @@
     --fonte1: Verdana, Geneva, Tahoma, sans-serif;
     --fonte2: 'Passion One', sans-serif;
     --fonte3: 'Sriracha', cursive;
-    
 }
 
 * {
@@ -60,6 +59,10 @@ section {
     font-size: 5vw;
 }
 
+section > p {
+    padding-bottom: 1.5em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -68,13 +71,30 @@ section.normal {
 section.imagem {
     background-color: rgb(91, 91, 91);
     color: white;
+    background-color: black;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.319);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
-    background-color: rgba(0, 0, 0, 0.382);
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.7);
     width: 400px;
+    text-shadow: 1px 1px 0px black;
 }
 
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    
+    
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+}
 
 footer {
     background-color: black;
