--- a/exercicios/ex026/mq002/estilos/retrato.css
+++ b/exercicios/ex026/mq002/estilos/retrato.css
@@ -1,6 +1,11 @@
 @charset "UTF-8";
 
+
+
 body {
-    background-color: blue;
-    background-image: url(../imagens/);
+    
+    background-image: url(../imagens/cev-portrait.jpg);
+    background-position: center bottom;
+    
 }
+
