--- a/exercicios/ex026/mq002/estilos/style.css
+++ b/exercicios/ex026/mq002/estilos/style.css
@@ -8,4 +8,15 @@
 
 html, body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100vw;
+    height: 100vh;
+}
+
+h1 {
+    color: white;
+    text-shadow: 3px 3px 3px #1b2ebd;
+    padding: 10px;
 }
