--- a/exercicios/ex026/mq005/estilos/style.css
+++ b/exercicios/ex026/mq005/estilos/style.css
@@ -18,7 +18,7 @@ body, html {
 }
 
 header h1 {
-    background-color: #949494;
+    background-color: #b75151;
     text-align: center;
     padding: 10px 0px;
 }
@@ -47,13 +47,13 @@ header menu {
 header menu ul {
     list-style-type: none;
 }
-#itens {
-    
+
+menu#itens {
     display: none;
 }
+
 header menu ul li {
     cursor: pointer;
-    
     background-color: rgb(73, 73, 73);
     text-align: center;
     padding: 10px 0px;
@@ -64,22 +64,17 @@ header menu ul li:hover {
     background-color: #949494;
 }
 
-header menu ul li a {
-    
+header menu ul li a { 
     text-decoration: none;
     color: white;
 }
 
 main {
-    
-    
     max-width: 700px;
     margin: auto;
     width: 95vw;
     background-color: white;
-    border-radius: 10px;
-    
-    
+    border-radius: 10px;   
 }
 
 main h2 {
