--- a/exercicios/ex026/mq005/estilos/style.css
+++ b/exercicios/ex026/mq005/estilos/style.css
@@ -17,8 +17,12 @@ body, html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-header h1 {
+header {
     background-color: #6c6c6c;
+}
+
+header h1 {
+    
     text-align: center;
     padding: 10px 0px;
 }
@@ -50,6 +54,7 @@ header menu {
 
 header menu ul {
     list-style-type: none;
+    
 }
 
 menu#itens {
