--- a/exercicios/ex027/flex013 - menu/style.css
+++ b/exercicios/ex027/flex013 - menu/style.css
@@ -6,20 +6,44 @@
   box-sizing: border-box;
 }
 
+body {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgb(228, 228, 228);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 header {
-  display: flex;
-  background-color: darkgrey;
+  padding: 10px;
+  background-color: rgb(138, 138, 138);
 }
 
 header h1 {
+  text-align: center;
   color: white;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.658);
+  padding: 10px 0px;
 }
 
 header nav {
-
-
+  display: flex;
+  flex-flow: column nowrap;
 }
 
 header nav a {
-  
+  background-color: black;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  padding: 10px;
+  margin: 5px 15px;
+  border-radius: 5px;
+}
+
+main {
+  background-color: rgb(255, 255, 255);
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.486);
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
 }
