--- a/exercicios/ex027/flex013 - menu/style.css
+++ b/exercicios/ex027/flex013 - menu/style.css
@@ -40,6 +40,12 @@ header nav a {
   border-radius: 5px;
 }
 
+header nav a:hover {
+  background-color: white;
+  color: black;
+  transition: background-color .5s;
+}
+
 main {
   background-color: rgb(255, 255, 255);
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.486);
