--- a/exercicios/ex027/flex014 - conteudo flex/style.css
+++ b/exercicios/ex027/flex014 - conteudo flex/style.css
@@ -10,37 +10,58 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1em;
   line-height: 1.5em;
-  height: 100vh;
-  width: 100vw;
+  text-align: justify;
 }
 
-main {
+.normal {
+  padding: 20px;
+}
 
+.normal h1 {
+  padding-bottom: 10px;
+  line-height: 1.2em;
+}
+
+h2 {
+  line-height: 2em;
 }
 
 section.flex-content {
   background-color: rgb(179, 177, 177);
+  display: flex;
+  flex-flow: column nowrap;
+  padding: 20px;
 }
 
 article.media-text {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap-reverse;
+  justify-content: space-between;
 }
 
 article.text-media {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
+  justify-content: space-between;
 }
 
-article .text {
-  max-width: 800px;
+article div.text {
+  flex: 1 1 500px;
 }
 
-article.media-text .media {
-  background-color: brown;
+article div.media {
+  flex: 1 0 400px;
 }
 
-article  .media {
-  background-color: aqua;
-  flex: 3 3 200px;
+div.media img {
+  display: block;
+  margin: auto;
+  width: 300px;
+}
+
+div.media iframe {
+  display: block;
+  margin: auto;
+  width: 90%;
+  padding-top: 10px;
 }
